@@ -67,6 +67,7 @@ Changes in 2.8
 - Add Timezone config variable in Warehouse.php + list of optional config variables in INSTALL
 - history grades in Transripts in Transcripts.php & rosariosis.sql
 - check accept cookies in index.php
+- regenerate session ID on login in index.php
 - Add Italian, Japanese, Portuguese, Russian, Turkish, Chinese, Bengali, Korean, Persian locales
 
 Upgrade from 2.7.x & 2.8-betax
